--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "sqlalchemy>=2.0.0",
     "alembic>=1.12.0",
     "asyncpg>=0.29.0",
+    "psycopg2-binary>=2.9.0",
     "httpx>=0.25.0",
     "pillow>=10.0.0",
     "pymupdf>=1.23.0",
