--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -53,7 +53,7 @@ services:
       - ./backend:/app/backend:ro
       - ./tests:/app/tests:ro
       - ./pyproject.toml:/app/pyproject.toml:ro
-      - ./manga-storage:/manga-storage:ro
+      - ./manga-storage:/manga-storage
     depends_on:
       postgres:
         condition: service_healthy
