--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.8'
 
+# Load environment variables from .env file
+# Copy .env.example to .env and update with your values
+
 services:
   # Backend API service
   backend:
@@ -9,9 +12,9 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql://kiremisu:development@postgres:5432/kiremisu
-      - SECRET_KEY=development-secret-key-change-in-production
-      - LOG_LEVEL=DEBUG
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-kiremisu}:${POSTGRES_PASSWORD:-development}@postgres:5432/${POSTGRES_DB:-kiremisu}
+      - SECRET_KEY=${SECRET_KEY:-development-secret-key-change-in-production}
+      - LOG_LEVEL=${LOG_LEVEL:-DEBUG}
     volumes:
       - ./backend:/app
       - manga-library:/manga
@@ -30,7 +33,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://localhost:8000
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -43,16 +46,16 @@ services:
     image: postgres:15-alpine
     restart: unless-stopped
     environment:
-      POSTGRES_DB: kiremisu
-      POSTGRES_USER: kiremisu
-      POSTGRES_PASSWORD: development
+      POSTGRES_DB: ${POSTGRES_DB:-kiremisu}
+      POSTGRES_USER: ${POSTGRES_USER:-kiremisu}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-development}
     ports:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U kiremisu -d kiremisu"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-kiremisu} -d ${POSTGRES_DB:-kiremisu}"]
       interval: 10s
       timeout: 5s
       retries: 5
