Testing Status:   - ✅ Frontend running at http://localhost:3000   - ✅ Backend running at http://localhost:8000   - ✅ Database connectivity confirmed   - ✅ No build artifacts committed   - ✅ Clean development environment
  Files Ready for Commit:
  - Frontend Foundation: Complete Next.js 15.5 + React 19.1 + TypeScript 5.9.2 setup
  - UI System: Tailwind CSS + shadcn/ui with Button component
  - Development Setup: Docker dev environment with selective volume mounts
  - Production Ready: Both dev and production Dockerfiles
  - Configuration: All config files, gitignore, and package.json

  This represents a solid foundation with modern versions and clean development workflow. The commit would include the complete frontend
  foundation following your workflow: frontend foundation → auth → manga features.

  Ready to commit with a conventional commit message like:
  feat: implement frontend foundation with Next.js 15.5 and React 19

  - Set up Next.js 15.5.0 with React 19.1.0 and TypeScript 5.9.2
  - Configure Tailwind CSS with shadcn/ui component system
  - Add development Docker setup with selective volume mounts
  - Create production-ready Dockerfiles for both frontend and backend
  - Implement clean development workflow with hot reloading

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,17 +29,22 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - ./frontend/src:/app/src
+      - ./frontend/public:/app/public
+      - ./frontend/package.json:/app/package.json
+      - ./frontend/next.config.js:/app/next.config.js
+      - ./frontend/tailwind.config.ts:/app/tailwind.config.ts
+      - ./frontend/tsconfig.json:/app/tsconfig.json
+      - ./frontend/postcss.config.js:/app/postcss.config.js
+      - ./frontend/components.json:/app/components.json
     depends_on:
       - backend
-    command: pnpm dev
 
   # PostgreSQL database
   postgres:
